      uses "su". (LP: #484725)
    - Also people have reported that nothing should be owned by 'nobody' per
      Debian & Ubuntu policy.  This could have been fixed by creating a DKMS
      user, but that still wouldn't solve the problems with using 'su'.
  * dkms: Emit built-module MODULE=foo if initctl is available on the system
    after done building a module.   
  
  [ Alberto Milone ]
  * dkms_common.postinst: try to build the module for the most recent
    kernel in addition to building it for the current kernel (LP: #474917).

  [ Steve Langasek ]
  * dkms_autoinstall: optimize with a single find call instead of multiple
    loops with ls. (LP: 3484386)
  * dkms_autoinstall: drop localization of the usage message - this is
    inconsistent with all other init scripts on the system.

  [ Pauli Virtanen ]
  * Remove dependence from environment's umask and certain environment 
    variables. (LP: #438393, #436039)

  [ Giuseppe Iuculano ]
  * dkms_autoinstall: Correct the provides in the LSB block.

  [ David Paleino ]
  * dkms: improve error message, and add Debian/Ubuntu specific suggestion.

 -- Mario Limonciello <mario_limonciello@dell.com>  Fri, 21 Aug 2009 15:49:58 -0500

dkms (2.0.22.0-1) unstable; urgency=low

  * [023618e] Imported Upstream version 2.0.22.0
  * [d6e0b15] Deleted patches merged in upstream: 01-fix_manpage.patch
    02-fix_distribution.patch 04-use_su-to-root.patch 05-
    do_not_check_admin_group.patch 06-fakeroot.patch 07-exit-if-build-
    fails.patch 09-lilo_detection.patch 10-lsb.patch 11-bash-
    completion.patch 12-use_invoke-rc.d.patch 13-template.patch
    14_new_module-init-tools.patch 08-support_kernel-img.conf.patch
  * [c5b7822] debian/patches/15_modprobe.patch: do not create an empty
    /etc/modprobe.d/package_name.conf. It is opened and parsed every
    time modprobe is run (and it is run very often at boot time). Create
    it only if necessary.
  * [3731c00] debian/patches/08-support_kernel-img.conf.patch: Use